test/Fail/Issue2480false2.err
Issue2480false2.agda:19.18-22: error: [UnequalTerms]
The terms
  x
and
  y
are not equal at type Bool
when checking that the expression refl has type f x ≡ f y
